--- a/index.html
+++ b/index.html
@@ -11,81 +11,81 @@
     <title>Slider</title>
   </head>
   <body>
-    <div class="container">
-      <div class="sidebar">
-        <div
+    <section class="slider">
+      <ul class="sidebar">
+        <li
           style="
             background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);
           "
         >
           <h1>Snow in the desert</h1>
           <p>Love, death & robots</p>
-        </div>
-        <div
+        </li>
+        <li
           style="
             background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);
           "
         >
           <h1>Life Hutch</h1>
           <p>Love, death & robots</p>
-        </div>
-        <div
+        </li>
+        <li
           style="
             background: linear-gradient(221.87deg, #8308ea 1%, #5305af 128%);
           "
         >
           <h1>Zima Blue</h1>
           <p>Love, death & robots</p>
-        </div>
-        <div
+        </li>
+        <li
           style="
             background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);
           "
         >
           <h1>Automated Customer Service</h1>
           <p>Love, death & robots</p>
-        </div>
-        <div style="background: rgb(186, 0, 51)">
+        </li>
+        <li style="background: rgb(186, 0, 51)">
           <h1>Three Robots</h1>
           <p>Love, death & robots</p>
-        </div>
-        <div style="background: rgb(238, 139, 43)">
+        </li>
+        <li style="background: rgb(238, 139, 43)">
           <h1>Exit Strategies</h1>
           <p>Love, death & robots</p>
-        </div>
-      </div>
-      <div class="main-slide">
-        <div
+        </li>
+      </ul>
+      <ul class="main-slide">
+        <li
           style="
             background-image: url('https://images.unsplash.com/photo-1500907789384-0c3b4c3bdce4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
           "
-        ></div>
-        <div
+        ></li>
+        <li
           style="
             background-image: url('https://images.unsplash.com/photo-1517936788989-5689e31c3c09?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
           "
-        ></div>
-        <div
+        ></li>
+        <li
           style="
             background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');
           "
-        ></div>
-        <div
+        ></li>
+        <li
           style="
             background-image: url('https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80');
           "
-        ></div>
-        <div
+        ></li>
+        <li
           style="
             background-image: url('https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
           "
-        ></div>
-        <div
+        ></li>
+        <li
           style="
             background-image: url('https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');
           "
-        ></div>
-      </div>
+        ></li>
+      </ul>
       <div class="controls">
         <button class="down-button">
           <i class="fas fa-arrow-down"></i>
@@ -94,7 +94,7 @@
           <i class="fas fa-arrow-up"></i>
         </button>
       </div>
-    </div>
+    </section>
     <script src="./index.js"></script>
   </body>
 </html>
